force-app/main/default/objects/Insurance__c/Insurance__c.object-meta.xml
<CustomObject>
    <label>Insurance</label>
    <nameField>
        <displayFormat>{0000000}</displayFormat>
        <label>System Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Insurance</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>