force-app/main/default/objects/Insurance__c/fields/Certificate_Number__c.field-meta.xml
<CustomField>
    <fullName>Certificate_Number__c</fullName>
    <label>Certificate Number</label>
    <type>TextArea</type>
</CustomField>