force-app/main/default/objects/Insurance__c/fields/Date_Active__c.field-meta.xml
<CustomField>
    <fullName>Date_Active__c</fullName>
    <label>Date Active</label>
    <type>Date</type>
</CustomField>