force-app/main/default/objects/Insurance__c/fields/Date_of_Expiry__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Expiry__c</fullName>
    <label>Date of Expiry</label>
    <type>Date</type>
</CustomField>