force-app/main/default/objects/Insurance__c/fields/Insurance_Policy_ID__c.field-meta.xml
<CustomField>
    <fullName>Insurance_Policy_ID__c</fullName>
    <label>Insurance Policy ID</label>
    <type>TextArea</type>
</CustomField>