force-app/main/default/objects/Insurance__c/fields/Is_Policy_Active__c.field-meta.xml
<CustomField>
    <fullName>Is_Policy_Active__c</fullName>
    <formula>IF(ISPICKVAL(Policy__r.Status__c, &apos;Active&apos;),&apos;Yes&apos;,&apos;No&apos;)</formula>
    <label>Is Policy Active</label>
    <type>Text</type>
</CustomField>