force-app/main/default/objects/Insurance__c/fields/Master_Policy_Number__c.field-meta.xml
<CustomField>
    <fullName>Master_Policy_Number__c</fullName>
    <label>Master Policy Number</label>
    <length>100</length>
    <type>Text</type>
</CustomField>