force-app/main/default/objects/Insurance__c/fields/Policy__c.field-meta.xml
<CustomField>
    <fullName>Policy__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Policy</label>
    <lookupFilter>
        <active>false</active>
        <filterItems>
            <field>Policy__c.Status__c</field>
            <operation>equals</operation>
            <value>Active</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Policy__c</referenceTo>
    <relationshipLabel>Insurance</relationshipLabel>
    <relationshipName>Policy_Insurances</relationshipName>
    <type>Lookup</type>
</CustomField>