force-app/main/default/objects/Insurance__c/listViews/Insurance.listView-meta.xml
<ListView>
    <fullName>Insurance</fullName>
    <columns>NAME</columns>
    <columns>Broker__c</columns>
    <columns>Date_of_Expiry__c</columns>
    <columns>Policy__c</columns>
    <filterScope>Everything</filterScope>
    <label>Insurance</label>
</ListView>